# rcli-csv

./: Cargo.toml  README.md  cargo_b64.txt  output.json  outputs_2.json  outputs_3.yaml
assets/: blake3.key  ed25519.pk  ed25519.sk  secret.key  sig_cargo_toml.txt  sig_cargo_toml_ed25519.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
