[package]
name = "rcli-csv"
version = "0.1.0"
authors = ["0xfinn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.4"
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.22"
tower-http = { version = "0.6.2", features = ["compression-full", "cors", "trace", "fs"] }
